feat: api repo setup complete

--- a/Api/src/.env.example
+++ b/Api/src/.env.example
@@ -25,9 +25,9 @@ S3_MERCHANT_BUCKET_NAME=merchant-documents
 S3_DFSP_LOGO_BUCKET_NAME=dfsp-logos
 
 # nodemailer config to send Email 
-MAIL_HOST=RSwitch Portal
+MAIL_HOST=St Michel Portal
 MAIL_PORT=465
-MAIL_USERNAME=wiredindev477@gmail.com
+MAIL_USERNAME=ugashudav@gmail.com
 MAIL_PASSWORD=yvlc kcyw vcov pfjv
 
 LOG_PATH=./logs
@@ -42,7 +42,7 @@ IV=ff5ac19190424b1d88f9419ef949ae56
 
 
 # hub super admin seed info
-PP_SUPERADMIN_EMAIL=bonaparte.ituze+hubsuperadmin@wiredin.rw
-PP_SUPERADMIN_NAME=Hub Super Admin
-PP_SUPERADMIN_PASSWORD=password
-PP_SUPERADMIN_PHONE_NUMBER=0780000000
+Portal_SUPERADMIN_EMAIL=bonaparte.ituze+hubsuperadmin@wiredin.rw
+Portal_SUPERADMIN_NAME=Hub Super Admin
+Portal_SUPERADMIN_PASSWORD=password
+Portal_SUPERADMIN_PHONE_NUMBER=0780000000
