--- a/Api/package.json
+++ b/Api/package.json
@@ -13,9 +13,6 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
-    "typescript": "^5.5.2"
-  },
-  "dependencies": {
     "@types/axios": "^0.14.0",
     "@types/bcrypt": "^5.0.2",
     "@types/cors": "^2.8.17",
@@ -29,6 +26,13 @@
     "@types/multer": "^1.4.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "ts-node": "^10.9.2",
+    "typeorm": "^0.3.20",
+    "typeorm-encrypted": "^0.8.0",
+    "zod": "^3.23.8",
+    "typescript": "^5.5.2"
+  },
+  "dependencies": {
     "axios": "^1.7.2",
     "bcrypt": "^5.1.1",
     "cors": "^2.8.5",
@@ -45,10 +49,6 @@
     "nodemailer": "^6.9.14",
     "swagger-jsdoc": "^6.2.8",
     "swagger-ui-express": "^5.0.1",
-    "ts-node": "^10.9.2",
-    "typeorm": "^0.3.20",
-    "typeorm-encrypted": "^0.8.0",
-    "winston": "^3.13.0",
-    "zod": "^3.23.8"
+    "winston": "^3.13.0"
   }
 }
