initial Dockerise all the apps

--- a/Api/.env.example
+++ b/Api/.env.example
@@ -8,9 +8,9 @@ JWT_EXPIRES_IN=1d
 INACTIVITY_LIMIT=15m
 
 # MYSQL DB CONFIG
-DB_HOST=127.0.0.1
+DB_HOST=stmp-db
 DB_PORT=3306
-DB_USERNAME=newuser
+DB_USERNAME=root
 DB_PASSWORD=password
 DB_DATABASE=stmp_db
 
@@ -21,7 +21,6 @@ S3_ACCESS_KEY=minioadmin
 S3_SECRET_KEY=minioadmin
 S3_REGION=us-east-1 # Not required for Minio.. Minio will ignore it.
 S3_USE_SSL=false # set to true if using https AWS S3
-S3_MERCHANT_BUCKET_NAME=merchant-documents
 S3_DFSP_LOGO_BUCKET_NAME=dfsp-logos
 
 # nodemailer config to send Email 
@@ -41,8 +40,8 @@ IVLENGTH=16
 IV=ff5ac19190424b1d88f9419ef949ae56
 
 
-# hub super admin seed info
-Portal_SUPERADMIN_EMAIL=bonaparte.ituze+hubsuperadmin@wiredin.rw
-Portal_SUPERADMIN_NAME=Hub Super Admin
+# Portal Super Admin seed info
+Portal_SUPERADMIN_EMAIL=ugashudav+stmpsuperadmin@gmail.com
+Portal_SUPERADMIN_NAME=Portal Super Admin
 Portal_SUPERADMIN_PASSWORD=password
 Portal_SUPERADMIN_PHONE_NUMBER=0780000000
