--- a/Dockerfile-Api
+++ b/Dockerfile-Api
@@ -1,12 +1,11 @@
 # Use an official Node runtime as the base image
 FROM node:18.16-alpine3.18
 WORKDIR /app
-COPY package*.json ./
-
-RUN npm i
 COPY . .
+RUN npm i
 
+WORKDIR /app/Api
 EXPOSE 3551
+CMD [ "npm", "run", "start" ]
 
 # Run the app when the container launches
-CMD [ "npm", "run", "start" ]
