feat: connecting login api

--- a/Portal/DockerFile
+++ b/Portal/DockerFile
@@ -1,9 +1,9 @@
 FROM node:20.15-alpine3.20
 WORKDIR /app
+COPY package*.json ./
+RUN npm i
 COPY . .
 
-WORKDIR /app/Portal
-RUN npm i
-EXPOSE 3550
+EXPOSE 5173
 
 CMD [ "npm", "run", "dev", "--", "--host"]
