--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -8,16 +8,16 @@ services:
     build: 
       context: .
       dockerfile: ./DockerFile-Portal
-    restart: unless-stopped
+    # restart: unless-stopped
     ports:
       - "3550:3550"
-    networks:
-      - stmp-net
+    # networks:
+    #   - stmp-net
 
   api:
     build:
       context: .
-      dockerfile: ./Dockerfile-Api
+      dockerfile: ./DockerFile-Api
     restart: unless-stopped
     # command: ["npm", "run", "start"]
     ports:
