--- a/package.json
+++ b/package.json
@@ -8,8 +8,5 @@
   "keywords": [],
   "author": "",
   "license": "ISC",
-  "description": "",
-  "workspaces": [
-    "*"
-  ]
+  "description": ""
 }
