--- a/DockerFile-Api
+++ b/DockerFile-Api
@@ -1,5 +1,5 @@
 # Use an official Node runtime as the base image
-FROM node:20.15-alpine3.20
+FROM node:20.15.0-alpine AS builder
 WORKDIR /app
 COPY . .
 
