location page initiation

--- a/Portal/package.json
+++ b/Portal/package.json
@@ -14,7 +14,9 @@
     "@chakra-ui/react": "^2.8.2",
     "@emotion/react": "^11.11.4",
     "@emotion/styled": "^11.11.5",
+    "@fontsource/inter": "^5.0.16",
     "@hookform/resolvers": "^3.6.0",
+    "@tanstack/react-table": "^8.19.2",
     "axios": "^1.6.2",
     "chakra-react-select": "^4.8.0",
     "framer-motion": "^11.2.12",
@@ -24,7 +26,6 @@
     "react-icons": "^4.12.0",
     "react-router-dom": "^6.24.0",
     "universal-cookie": "^7.1.4",
-    "@fontsource/inter": "^5.0.16",
     "zod": "^3.23.8"
   },
   "devDependencies": {
