--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -33,7 +33,7 @@ services:
     container_name: stmp-db
     image: mysql:8.0.33
     command: --default-authentication-plugin=mysql_native_password
-    # restart: unless-stopped
+    restart: unless-stopped
     environment:
       - MYSQL_ROOT_PASSWORD=password
     ports:
