--- a/Api/package.json
+++ b/Api/package.json
@@ -26,11 +26,12 @@
     "@types/multer": "^1.4.11",
     "@types/swagger-jsdoc": "^6.0.4",
     "@types/swagger-ui-express": "^4.1.6",
+    "nodemon": "^3.1.4",
     "ts-node": "^10.9.2",
     "typeorm": "^0.3.20",
     "typeorm-encrypted": "^0.8.0",
-    "zod": "^3.23.8",
-    "typescript": "^5.5.2"
+    "typescript": "^5.5.3",
+    "zod": "^3.23.8"
   },
   "dependencies": {
     "axios": "^1.7.2",
