DG:userManagement: fix running the aps using docker

--- a/DockerFile-Api
+++ b/DockerFile-Api
@@ -1,10 +1,14 @@
 # Use an official Node runtime as the base image
 FROM node:20.15.0-alpine AS builder
 WORKDIR /app
-COPY . .
+COPY ./shared-lib /app/shared-lib
+COPY ./Api /app/Api
 
 WORKDIR /app/Api
-RUN npm i
+RUN npm i --save
+# RUN npm i ts-node --save-dev
+RUN npm i @types/bcrypt --save-dev
+RUN npm i --save bcrypt 
 
 EXPOSE 3551
 CMD [ "npm", "run", "start" ]
