--- a/Api/.env.npm
+++ b/Api/.env.npm
@@ -1,5 +1,6 @@
 NODE_ENV=development
 APP_URL=http://localhost:3551 # for email verification
+FRONTEND_SET_PASSWORD_URL=http://localhost:3550/set-password
 HOST=0.0.0.0
 PORT=3551
 
@@ -27,7 +28,7 @@ S3_DFSP_LOGO_BUCKET_NAME=dfsp-logos
 MAIL_HOST=St Michel Portal
 MAIL_PORT=465
 MAIL_USERNAME=ugashudav@gmail.com
-MAIL_PASSWORD=yvlc kcyw vcov pfjv
+MAIL_PASSWORD=tunq fxhj fyvf mamw
 
 LOG_PATH=./logs
 LOG_LEVEL=debug
