DG-users: update docker compose yaml

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -53,7 +53,7 @@ services:
       - MAIL_HOST=St Michel Portal
       - MAIL_PORT=465
       - MAIL_USERNAME=ugashudav@gmail.com
-      - MAIL_PASSWORD=yvlc kcyw vcov pfjv
+      - MAIL_PASSWORD=tunq fxhj fyvf mamw
       - LOG_PATH=./logs
       - LOG_LEVEL=debug
       - LOG_DISABLED=false
@@ -65,6 +65,7 @@ services:
       - Portal_SUPERADMIN_NAME=Portal Super Admin
       - Portal_SUPERADMIN_PASSWORD=password
       - Portal_SUPERADMIN_PHONE_NUMBER=0780000000
+      - FRONTEND_SET_PASSWORD_URL=http://localhost:3550/set-password
 
   stmp-db:
     container_name: stmp-db
