--- a/Api/.env.npm
+++ b/Api/.env.npm
@@ -7,6 +7,7 @@ PORT=3551
 JWT_SECRET=api-stmp-jwt_secret # TODO: change this in production
 JWT_EXPIRES_IN=1d
 INACTIVITY_LIMIT=15m
+PAGINATION_LIMIT=10
 
 # MYSQL DB CONFIG
 DB_HOST=localhost
