--- a/DockerFile-Api
+++ b/DockerFile-Api
@@ -1,16 +1,16 @@
 # Use an official Node runtime as the base image
-FROM node:20.15.0-alpine AS builder
+FROM node:18.16-alpine AS builder
 WORKDIR /app
 COPY ./shared-lib /app/shared-lib
 COPY ./Api /app/Api
 
 WORKDIR /app/Api
-RUN npm i --save
+RUN npm i 
 # RUN npm i ts-node --save-dev
 # RUN npm i @types/bcrypt --save-dev
 # RUN npm i --save bcrypt 
 
 EXPOSE 3551
-CMD [ "npm", "run", "start" ]
+# CMD [ "npm", "run", "start" ]
 
 # Run the app when the container launches
