DG/Feedbacks: add frontend

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -17,14 +17,28 @@ services:
       - VITE_LIMIT_PER_PAGE=10
     volumes:
       - ./Portal/src:/app/Portal/src
+
+  front-end:
+    build: 
+      context: .
+      # dockerfile: ./Portal/DockerFile
+      dockerfile: ./DockerFile-Front-End
+    restart: unless-stopped
+    ports:
+      - "5173:5173"
+    # environment:
+    #   - VITE_API_URL=http://localhost:3551/api
+    #   - VITE_LIMIT_PER_PAGE=10
+    volumes:
+      - ./Front-End/src:/app/Front-End/src
       
   api:
     build:
       context: .
       dockerfile: ./DockerFile-Api
     restart: unless-stopped
-    # command: ["npm", "run", "dev"] # used in development for nodemon
-    command: ["npm", "run", "start"] 
+    command: ["npm", "run", "dev"] # used in development for nodemon
+    # command: ["npm", "run", "start"] 
     ports:
       - "3551:3551"
     networks:
