--- a/Front-end/package.json
+++ b/Front-end/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.2.7",
     "aos": "^2.3.4",
+    "axios": "^1.7.9",
     "i18next": "^23.12.2",
     "lucide-react": "^0.427.0",
     "react": "^18.3.1",
